--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -26,7 +26,7 @@ In the root folder of your application run `create-fuse-app` with npx, pnpm, or 
   <Tabs.Tab>
   
 ```sh
-npx create fuse-app
+npx create-fuse-app
 ```
   </Tabs.Tab>
   <Tabs.Tab>
