--- a/website/src/pages/docs/client/types.mdx
+++ b/website/src/pages/docs/client/types.mdx
@@ -6,6 +6,24 @@ Folks who have been with fuse longer might still be on the GraphQL Code Generato
 we still support this! We'll check whether `tadaOutputLocation` is set in the `tsconfig` and
 whether you have `gql.tada` intalled. If not, we'll fall back to the GraphQL Code Generator.
 
+The biggest difference between the two in terms of writing code is that fragments in `gql.tada`
+aren't global which means you'll have to explicitly add them in the second argument of the `graphql`
+function.
+
+```ts
+const UserQuery = graphql(`
+  query User {
+    user(id: "1") {
+      id
+      ...UserFields
+    }
+  }
+`, [UserFragment]) // needed in tada but not codegen.
+```
+
+The other difference is that `gql.tada` will calculate everything at runtime while with codegen
+there will always be a background process running to calculate the types.
+
 ## Migrating to gql.tada
 
 To migrate to `gql.tada` we'll need to ensure that the LSP is working correctly and is upgraded to v1,
