--- a/website/src/pages/docs/client/javascript/nextjs.mdx
+++ b/website/src/pages/docs/client/javascript/nextjs.mdx
@@ -57,7 +57,7 @@ const UserQuery = graphql(`
       ...Avatar_UserFields
     }
   }
-`, [AvatarFragment]) // this is only needed with gql.tada as it doesn't support global fragments
+`, [AvatarFragment])
 
 function User() {
   const [result] = useQuery({
@@ -80,7 +80,7 @@ const UpdateUser = graphql(`
       ...Avatar_UserFields
     }
   }
-`, [AvatarFragment]) // this is only needed with gql.tada as it doesn't support global fragments
+`, [AvatarFragment])
 
 const UpdateUser = () => {
   const [result, update] = useMutation(UpdateUser)
@@ -116,7 +116,7 @@ const UserQuery = graphql(`
       ...Avatar_UserFields
     }
   }
-`, [AvatarFragment]) // this is only needed with gql.tada as it doesn't support global fragments
+`, [AvatarFragment])
 
 const User = () => {
   const [result] = useQuery({
@@ -249,7 +249,7 @@ const UserQuery = graphql(`
       ...Avatar_UserFields
     }
   }
-`, [AvatarFragment]) // this is only needed with gql.tada as it doesn't support global fragments
+`, [AvatarFragment])
 
 function User() {
   const [result] = useQuery({
