--- a/website/src/pages/docs/client/javascript/vue.mdx
+++ b/website/src/pages/docs/client/javascript/vue.mdx
@@ -17,13 +17,13 @@ const UserQuery = graphql(`
       ...Avatar_UserFields
     }
   }
-`, [AvatarFragment]) // this is only needed with gql.tada as it doesn't support global fragments
+`, [AvatarFragment])
 ```
 
 and for a fragment:
 
 ```tsx
-import { graphql, useFragment, FragmentType } from '../../fuse'
+import { graphql, readFragment, FragmentOf } from '../../fuse'
 
 export const AvatarFragment = graphql(`
   fragment Avatar_UserFields on User {
@@ -32,6 +32,6 @@ export const AvatarFragment = graphql(`
   }
 `)
 
-// Derive the input-type: FragmentType<typeof AvatarFragment>
-// Apply fragment-masking: useFragment(AvatarFragment, user);
+// Derive the input-type: FragmentOf<typeof AvatarFragment>
+// Apply fragment-masking: readFragment(AvatarFragment, user);
 ```
