--- a/website/src/pages/docs/server/mocking.mdx
+++ b/website/src/pages/docs/server/mocking.mdx
@@ -3,7 +3,7 @@ import { Explain } from "@/components/Explain"
 # Mocking data
 
 Sometimes you're waiting for the backend team to add a new property to the resource, that
-however should not stop you from developing the frontend. You can mock the data in the datalayer
+however should not stop you from developing the frontend. You can mock the data in the API
 and prototype your feature on top of that.
 
 ## Mocking fields
