--- a/website/src/pages/docs/server/nodes.mdx
+++ b/website/src/pages/docs/server/nodes.mdx
@@ -125,7 +125,7 @@ Now we can invoke that with `VXNlcjox` and we'll get our user named `John` as a 
 
 ## Connecting nodes
 
-In the datalayer we want our data to be connected so we can do a single API call to retrieve
+In the API we want our data to be connected so we can do a single request to retrieve
 all the resources we need to show the data on the screen.
 
 ### Referencing other nodes
