--- a/website/src/pages/docs/client/javascript/nextjs.mdx
+++ b/website/src/pages/docs/client/javascript/nextjs.mdx
@@ -182,7 +182,7 @@ pass on the data to child components.
 
 ### Server actions
 
-We can also invoke mutations as part of a [`server-action`](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations#how-server-actions-work)
+We can also invoke mutations as part of a [`server-action`](https://nextjs.org/docs/app/building-your-application/data-fetching/forms-and-mutations)
 This requires us to create a new file, for example in this example we'll call a mutation with a name
 argument that returns us `Hello ${args.name}`.
 
