--- a/website/src/pages/docs/client/index.mdx
+++ b/website/src/pages/docs/client/index.mdx
@@ -29,18 +29,18 @@ help with typing your results, variables and facilitating the client-methods.
 
 Let's go over each file:
 
-- [`fuse/client.ts`](/docs/basics/client/client-components): This is the main entry-point for React client components (including `'use client'` in Next.js's App Router). It exports the `useQuery`/... hooks which you can use in your
+- [`fuse/client.ts`](/docs/client/javascript/nextjs#client-components): This is the main entry-point for React client components (including `'use client'` in Next.js's App Router). It exports the `useQuery`/... hooks which you can use in your
   client components to talk to your API.
-- [`fuse/server.ts`](/docs/basics/client/server-components): This is the main entry-point for React server components and server actions. It exports an `execute` function
+- [`fuse/server.ts`](/docs/client/javascript/nextjs#server-components): This is the main entry-point for React server components and server actions. It exports an `execute` function
   which takes a <Explain term='documents'>`Document`</Explain> and `variables` and will execute the operation in-process without an extra HTTP request to the API.
-- [`fuse/fragment-masking.ts`](/docs/basics/client/best-practices): The `readFragment` and `FragmentOf` helpers are exported from here,
+- [`fuse/fragment-masking.ts`](/docs/client/best-practices): The `readFragment` and `FragmentOf` helpers are exported from here,
   these helpers basically ensure that the props you pass in will be reduced to the selection of fields
   of your <Explain term='fragments'>fragment</Explain>.
 - `fuse/gql.ts`: The `graphql()` function is exported from here, this helper ensures that both the `Result`
   and `Variables` are typed correctly for a given <Explain term='documents'>`Document`</Explain>.
 - `fuse/graphql.ts`: This file contains a translation of your GraphQL schema to TypeScript types.
   It also contains the <Explain term='documents'>`Document`</Explain> type which is a helper type to type your GraphQL documents.
-- [`fuse/pages.ts`](/docs/basics/client/page-components) (Next.js-only): This is the main entry-point for the Next.js `/pages` router.
+- [`fuse/pages.ts`](/docs/client/javascript/nextjs#pages-router) (Next.js-only): This is the main entry-point for the Next.js `/pages` router.
   It exports the `withUrqlClinet` and `initUrqlClient` to work with `getServerSideProps`, ...
   As well as React hooks which you can use in your components.
 
