--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -72,4 +72,4 @@ Now, run `npx fuse dev` (or `pnpm fuse dev`, `yarn fuse dev`, or `bun fuse dev`)
 
 </Steps>
 
-You've now got Fuse setup! 🎉 Next, learn how to [query your Fuse API from the client](/docs/basics/client) and learn more about [the Fuse Method for managing APIs](/docs/fuse-method).
+You've now got Fuse setup! 🎉 Next, learn how to [query your Fuse API from the client](/docs/client) and learn more about [the Fuse Method for managing APIs](/docs/fuse-method).
