Fix sample response in error-handling.mdx

--- a/website/src/pages/docs/server/error-handling.mdx
+++ b/website/src/pages/docs/server/error-handling.mdx
@@ -45,7 +45,7 @@ When we aren't logged in the `json` response coming through here will look like 
 ```json
 {
   "data": {
-    "user": null,
+    "me": null,
     "products": {
       "nodes": [{ "id": ".."}],
       "totalCount": 1
