fix/404-docs-redirect
Fixes #162

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -24,25 +24,25 @@ In the root folder of your application run `create-fuse-app` with npx, pnpm, or 
 
 <Tabs items={['npm','pnpm',  'yarn', 'bun']}>
   <Tabs.Tab>
-  
+
 ```sh
 npx create-fuse-app
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-  
+
 ```sh
 pnpm create fuse-app
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-  
+
 ```sh
 yarn create fuse-app
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-  
+
 ```sh
 bun create fuse-app
 ```
@@ -72,4 +72,4 @@ Now, run `npx fuse dev` (or `pnpm fuse dev`, `yarn fuse dev`, or `bun fuse dev`)
 
 </Steps>
 
-You've now got Fuse setup! 🎉 Next, learn how to [query your Fuse API from the client](/docs/basics/client) and learn more about [the Fuse Method for managing APIs](/docs/fuse-method).
+You've now got Fuse setup! 🎉 Next, learn how to [query your Fuse API from the client](/docs/client) and learn more about [the Fuse Method for managing APIs](/docs/fuse-method).
